--- a/src/style.css
+++ b/src/style.css
@@ -45,9 +45,8 @@ body {
     grid-template-columns: 1fr 2fr 0.7fr;
 }
 
-.product .image {
-    background: center no-repeat;
-    background-size: contain;
+.product img {
+    width: 100%;
 }
 
 .product .text a {
@@ -96,7 +95,7 @@ body {
     height: 100%;
 }
 
-#popupBuy img {
+#popupBuy .close {
     position: absolute;
     margin: 3px;
     top: 0;
@@ -117,9 +116,8 @@ body {
 
 #popupBuy .image {
     margin: 0 20px;
-    height: 70%;
-    background: center no-repeat;
-    background-size: contain;
+    max-width: 80%;
+    max-height: 80%;
 }
 
 #popupBuy span {
@@ -236,9 +234,8 @@ body {
 }
 
 #popupCart .image {
-    margin: 20px;
-    background: center no-repeat;
-    background-size: contain;
+    margin: 10px;
+    width: 90%;
 }
 
 #popupCart .text{
