--- a/src/styles/basket.css
+++ b/src/styles/basket.css
@@ -82,3 +82,9 @@
   margin-left: 10px;
   width: 130px;
 }
+
+.basket-button {
+  background: url("../assets/icons/basket.svg");
+  width: 24px;
+  height: 24px;
+}
