--- a/src/style.css
+++ b/src/style.css
@@ -66,14 +66,21 @@ h3 {
 
 .order-popup {
     position: fixed;
+    top: 0;
+    display: none;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(218, 218, 218, 0.6);
+}
+
+.order-popup__container {
+    position: fixed;
     top: 30%;
     z-index: 12;
-    display: none; /*flex; */
-    flex-direction: column;
-    flex-wrap: wrap;
     padding: 15px;
     background-color: white;
-    border: 2px solid #d3d3d3;
+    border: 2px solid #666666;
 }
 
 .order-popup__wrapper {
@@ -94,7 +101,7 @@ h3 {
     color: #c7315e;
 }
 
-.order-popup__form-wrapper {
+.order-popup__form {
     margin-bottom: 30px;
     padding-left: 30px;
     border: none;
@@ -133,10 +140,10 @@ h3 {
     top: 20px;
     right: 50px;
     z-index: 10;
-    display: none; /*inline-block; */
+    display: none;
+    flex-direction: column;
     max-width: 350px;
     max-height: 400px;
-    word-break: break-all;
     background-color: white;
     border: 1px solid gray;
     overflow: auto;
@@ -148,12 +155,19 @@ h3 {
     font-size: 20px;
     color: white;
     background-color: gray;
+    cursor: pointer;
 }
 
 .cart-popup__product {
     position: relative;
     display: flex;
     border-bottom: 1px solid black;
+}
+
+.cart-popup__list {
+    max-width: 350px;
+    height: 50px;
+    background-color: white;
 }
 
 .cart-popup__info {
@@ -165,7 +179,7 @@ h3 {
 
 .cart-popup__name {
     max-width: 200px;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 400;
 }
 
@@ -177,11 +191,15 @@ h3 {
 
 /* close */
 
+.visible {
+    display: flex;
+}
+
 .order-popup__close,
-.cart-popup__close {
+.cart-popup__remove {
     position: absolute;
-    top: 5px;
-    right: 5px;
+    top: 2px;
+    right: 2px;
     width: 20px;
     height: 20px;
     cursor: pointer;
@@ -189,25 +207,25 @@ h3 {
 
 .order-popup__close::after,
 .order-popup__close::before,
-.cart-popup__close::after,
-.cart-popup__close::before {
+.cart-popup__remove::after,
+.cart-popup__remove::before {
     position: absolute;
     content: "";
     width: 2px;
     height: 13px;
     background-color: #d3d3d3;
-    top: 0px;
-    right: 5px;
+    top: 5px;
+    right: 10px;
     transform: rotate(45deg);
 }
 
 .order-popup__close::before,
-.cart-popup__close::before {
+.cart-popup__remove::before {
     transform: rotate(-45deg);
 }
 
-.cart-popup__close::after,
-.cart-popup__close::before {
+.cart-popup__remove::after,
+.cart-popup__remove::before {
     top: 0;
     right: 5px;
     background-color: #c7315e;
