--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,6 +4,12 @@
   font-size: 12px;
   max-width: 1440px;
   height: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
 }
 .header {
   display: flex;
@@ -23,13 +29,12 @@
   height: 38px;
   cursor: pointer;
 }
-/* listing */
+/* ========================= listing ========================= */
 .products {
   margin: 0 auto;
   max-width: 70%;
   padding: 80px 0;
 }
-
 .products__list {
   background-color: #fff;
   list-style: none;
@@ -39,11 +44,12 @@
 .product {
   margin-bottom: 20px;
 }
-
 .product__container {
   display: flex;
   justify-content: space-between;
   height: 230px;
+  -webkit-box-shadow: 0 0 5px #ececec;
+  -moz-box-shadow: 0 0 5px #ececec;
   box-shadow: 0 0 5px #ececec;
 }
 .product__container:hover {
@@ -51,9 +57,7 @@
   -moz-box-shadow: 0 5px 30px 0 #00000033;
   box-shadow: 0 5px 15px 0 #00000033;
 }
-
 .product__image {
-  flex-shrink: 0;
   max-height: 216px;
   margin: 10px;
   width: 216px;
@@ -61,7 +65,6 @@
 .product__content {
   width: 100%;
 }
-
 .product__heading {
   font-weight: normal;
 }
@@ -97,7 +100,7 @@
 .btn_add-to-cart-btn {
   background: #ebebeb;
 }
-/* Order popup */
+/*  ========================= Order popup ========================= */
 .popup {
   position: fixed;
   display: none;
@@ -119,7 +122,6 @@
 .order-popup__container {
   position: fixed;
   top: 25%;
-  left: 20%;
   display: grid;
   grid-template-columns: 250px 0.5fr;
   grid-template-rows: 75px 1fr 100px;
@@ -156,7 +158,6 @@
   display: block;
   margin-top: 12px;
 }
-
 .order-popup__form {
   margin-bottom: 30px;
   padding-left: 30px;
@@ -193,13 +194,15 @@
   margin-right: 20px;
   text-align: right;
 }
-/* cart */
+/* ========================= cart popup =========================*/
 .add-to-cart-popup {
   flex-direction: column;
   top: 67px;
   right: 15px;
   width: 340px;
   box-shadow: #979797 0 3px 10px;
+  -webkit-box-shadow: #979797 0 3px 10px;
+  -moz-box-shadow: #979797 0 3px 10px;
   min-height: 300px;
   background-color: #dadada;
 }
@@ -240,8 +243,7 @@
 }
 .add-to-cart-popup__name {
   margin: 0;
-}
-.add-to-cart-popup__price {
+  width: 90%;
 }
 .add-to-cart-popup__btn {
   color: #fff;
@@ -252,7 +254,6 @@
 }
 .add-to-cart-popup__row {
   display: flex;
-  /* justify-content: space-between; */
   margin: 0 0 15px 0;
   position: relative;
 }
@@ -261,5 +262,4 @@
 }
 .add-to-cart-popup__container {
   padding: 15px;
-  overflow-y: hidden;
 }
