--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,8 +9,15 @@ body {
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+img {
+  max-width: 100%;
+}
+
 header {
   background-color: #eee;
+  width: 100%;
+  position: fixed;
+  top: 0;
 }
 
 .header__container {
@@ -24,6 +31,8 @@ header {
 }
 
 .btn {
+  display: block;
+  text-decoration: none;
   border: none;
   padding: 15px;
   background-color: #eee;
@@ -39,7 +48,68 @@ header {
   background-color: #919191;
 }
 
-.product-listing {
+.card {
+  display: none;
+  position: absolute;
+  top: 50px;
+  background-color: #f7f7f7;
+  width: 400px;
+  /* height: 400px; */
+}
+
+.card__title {
+  background-color: #919191;
+  padding: 20px;
+  color: #fff;
+}
+
+.card__body {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  max-height: 600px;
+}
+
+.card__body > * {
+  margin-top: 20px;
+}
+
+#toCardBtn {
+  display: inline-block;
+  color: #fff;
+  background-color: #cc2157;
+  margin: 20px;
+}
+
+.card-item {
+  display: flex;
+}
+
+.card-item__left {
+  width: 50%;
+}
+
+.card-item__right {
+  padding: 0 10px;
+  position: relative;
+  width: 50%;
+}
+
+.card-item__title {
+  font-weight: 500;
+}
+
+.card-item__price {
+  margin-top: 10px;
+  color: #59595a;
+}
+
+.card-item__delete {
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
 }
 
 .product {
