--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -48,6 +48,7 @@ header {
   background-color: #919191;
 }
 
+/* корзина */
 .card {
   display: none;
   position: absolute;
@@ -112,6 +113,7 @@ header {
   cursor: pointer;
 }
 
+/* продукты на странице */
 .product {
   display: flex;
   margin-top: 40px;
@@ -156,4 +158,87 @@ header {
 
 .btn__to-card {
   color: #5f5f5f;
+}
+
+/* всплывашка с заказом */
+.popup-order {
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.popup-order__window {
+  position: relative;
+  width: 800px;
+  background-color: #fff;
+  padding: 20px;
+}
+
+#popup-close {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  cursor: pointer;
+}
+
+.popup-order__block {
+  display: flex;
+  margin-top: 20px;
+}
+
+.popup-order__left {
+  width: 25%;
+}
+
+.popup-order__right {
+  width: 75%;
+}
+
+.coment {
+  display: flex;
+  border-left: 5px solid #cc2157;
+  padding-left: 20px;
+  padding-bottom: 40px;
+  justify-content: space-between;
+}
+
+.coment__label {
+  width: 20%;
+  text-align: right;
+}
+
+.popup-order__price {
+  font-size: 24px;
+  color: #cc2157;
+}
+
+.coment__text {
+  border: none;
+  background-color: #eeeeef;
+  width: 75%;
+  padding: 10px;
+}
+
+.phone-input {
+  border: none;
+  background-color: #eeeeef;
+  padding: 10px;
+}
+
+.form-submit {
+  border: none;
+  padding: 10px 40px;
+  background-color: #cc2157;
+  color: #fff;
+  cursor: pointer;
+  font-family: inherit;
 }
