--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,15 +1,5 @@
 @import url('./reset.css');
 @import url('./fonts.css');
-
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: 'Roboto', 'Tahoma', 'Arial', sans-serif;
-}
+@import url('./var.css');
+@import url('./common.css');
+@import url('./product-listing.css');
