--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -2,4 +2,7 @@
 @import url('./fonts.css');
 @import url('./var.css');
 @import url('./common.css');
+@import url('./btn.css');
 @import url('./product-listing.css');
+@import url('./cart.css');
+@import url('./order-popup.css');
