--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -20,8 +20,14 @@ body {
 }
 
 body {
+  color: var(--color-main);
   font-family: 'Roboto', 'Tahoma', 'Arial', sans-serif;
   font-size: 1rem;
   line-height: 1.2;
   min-height: 100vh;
+}
+
+img {
+  display: block;
+  max-width: 100%;
 }
