--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -2,6 +2,8 @@
   --color-main: #59595a;
   --color-accent: #cc2157;
   --color-light: #eaeaea;
+  --color-shadow: rgba(0, 0, 0, 0.2);
+  --shadow: 0px 4px 16px 0px var(--color-shadow);
 }
 
 *,
@@ -30,4 +32,12 @@ body {
 img {
   display: block;
   max-width: 100%;
+}
+
+.no-scroll {
+  overflow: hidden;
+}
+
+.open {
+  display: block !important;
 }
