--- a/src/assets/styles/btn.css
+++ b/src/assets/styles/btn.css
@@ -15,3 +15,14 @@
   --color-bg: var(--color-light);
   --color: var(--color-main);
 }
+
+.btn-close {
+  --color-bg: transparent;
+  --color: var(--color-accent);
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: .5rem;
+  font-size: 1.2rem;
+  font-weight: 700;
+}
