--- a/src/assets/styles/order-popup.css
+++ b/src/assets/styles/order-popup.css
@@ -1,3 +1,52 @@
 .order-popup {
+  --color-bg: #fff;
   display: none;
+  width: 90%;
+  max-width: 1200px;
+  height: auto;
+  max-height: 80%;
+  overflow-y: auto;
+  padding: 1rem;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  background-color: var(--color-bg);
+  -webkit-box-shadow: var(--shadow);
+  box-shadow: var(--shadow);
+}
+
+.order-popup__wrapper {
+  display: grid;
+  grid-template-columns: 25% 1fr;
+  grid-gap: 1rem;
+}
+
+.order-popup__title {
+  grid-area: 1 / 1 / 2 / 3;
+  font-size: 1rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.order-popup__info {
+  grid-area: 2 / 1 / 3 / 2;
+}
+
+.order-popup__comment {
+  grid-area: 2 / 2 / 3 / 3;
+}
+
+.order-popup__phone-label {
+  grid-area: 3 / 1 / 4 / 2;
+}
+
+.order-popup__phone-input {
+  grid-area: 3 / 2 / 4 / 3;
+}
+
+.order-popup__submit {
+  grid-area: 4 / 2 / 5 / 3;
 }
