Стили и разметка для попапа завершены

--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -37,6 +37,7 @@ img {
 textarea,
 input {
   --color-bg: var(--color-light);
+  display: block;
   border: none;
   border-radius: 0;
   background-color: var(--color-bg);
@@ -45,6 +46,7 @@ input {
 }
 
 label {
+  display: block;
   font-size: .8rem;
   font-weight: 700;
 }
