--- a/src/assets/styles/order-popup.css
+++ b/src/assets/styles/order-popup.css
@@ -33,17 +33,51 @@
 }
 
 .order-popup__comment {
+  --color-border: var(--color-accent);
+  --border: .2rem solid var(--color-border);
   grid-area: 2 / 2 / 3 / 3;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding-left: 1rem;
+  border-left: var(--border);
 }
 
 .order-popup__phone-label {
   grid-area: 3 / 1 / 4 / 2;
+  text-align: right;
 }
 
 .order-popup__phone-input {
   grid-area: 3 / 2 / 4 / 3;
+  justify-items: start;
+  width: 25%;
 }
 
 .order-popup__submit {
   grid-area: 4 / 2 / 5 / 3;
+  justify-items: start;
+  max-width: 20%;
+}
+
+.order-popup__comment-label {
+  flex-shrink: 0;
+  margin-right: 1rem;
+  text-align: right;
+}
+
+.order-popup__comment-textarea {
+  flex-grow: 1;
+  width: 100%;
+  height: 60%;
+}
+
+.order-popup__img {
+  margin-bottom: 1rem;
+}
+
+.order-popup__price {
+  --color: var(--color-accent);
+  color: var(--color);
+  font-size: 1rem;
 }
