Внесены изменения в стили

--- a/src/assets/styles/cart.css
+++ b/src/assets/styles/cart.css
@@ -1,7 +1,6 @@
 .cart {
   --color-bg: #fff;
-  display: none;
-  position: absolute;
+  position: fixed;
   top: .5rem;
   right: 1rem;
   width: 30%;
