--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -24,6 +24,10 @@ body {
 
 body {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   color: var(--color-main);
   font-family: 'Roboto', 'Tahoma', 'Arial', sans-serif;
   font-size: 1rem;
