--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,7 @@ h2 {
   padding-left: 20px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   height: 60px;
 }
 
@@ -216,7 +217,7 @@ h2 {
   padding-left: 35px;
 }
 
-.close-cart-pop-up {
+.delete-item-cart-popup {
   padding-top: 15px;
   font-size: 20px;
   font-weight: 700;
@@ -249,6 +250,13 @@ h2 {
   position: absolute;
   right: 10px;
   color: #a9a9a9;
+  cursor: pointer;
+}
+
+.close-cart-popup {
+  padding-right: 20px;
+  font-size: 20px;
+  color: #000000;
   cursor: pointer;
 }
 
