feat: добавить класс Popup и PopupBasket
Создать стили для Popup и PopupBasket

Создать логику работы PopupBasket

Добавить функцию открытия попапа корзины

Добавить обработчик кнопки корзины на карточку

Добавить в constants конфиги Popup

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,4 @@
 @import url('./blocks/root/root.css');
 @import url('./blocks/product/product.css');
 @import url('./blocks/card/card.css');
+@import url('./blocks/popup/popup.css');
