--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -7,8 +7,6 @@
   position: fixed;
   top: 0;
   left: 0;
-  justify-content: center;
-  align-items: center;
   z-index: 2;
   transition: visibility 0.5s, opacity 0.5s ease;
 }
@@ -16,6 +14,15 @@
 .popup_opened {
   visibility: visible;
   opacity: 1;
+}
+
+.popup_basket {
+  width: 90%;
+  max-width: 1400px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .popup__overlay {
@@ -43,6 +50,7 @@
 
 .popup__body_order {
   width: 80%;
+  max-width: 850px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -67,7 +75,7 @@
   content: '';
   position: absolute;
   right: 20%;
-  top: -20px;
+  top: -19px;
   border: 10px solid transparent;
   border-left: 10px solid #919191;
   transform: rotate(-90deg);
