--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,67 +1,6 @@
-body {
-  display: flex;
-  justify-content: center;
-  box-sizing: border-box;
-  padding: 50px 0;
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-}
-
-.products {
-  max-width: 768px;
-}
-
-.products__list {
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
-}
-
-.product {
-  display: flex;
-  justify-content: space-between;
-  padding: 20px;
-  height: 240px;
-  gap: 20px;
-}
-
-.product:hover {
-  box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
-}
-
-.product__info {
-  display: flex;
-  flex-direction: column;
-  min-width: 320px;
-  gap: 20px;
-}
-
-.product__image {
-  width: 240px;
-  object-fit: contain;
-}
-
-.product__buttons {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 20px;
-}
-
-.product__button {
-  all: unset;
-  width: 128px;
-  height: 30px;
-  background-color: rgb(199, 21, 95);
-  color: #ffffff;
-  text-align: center;
-  cursor: pointer;
-}
-
-.product__button_cart {
-  background-color: #efeeee;
-  color: #3f3f3f;
-}
+@import url(../vendors/normalize.css);
+@import url(../vendors/fonts.css);
+@import url(../styles/style.css);
+@import url(../styles/product.css);
+@import url(../styles/popup.css);
+@import url(../styles/products.css);
