--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -1,6 +1,7 @@
 .product {
   display: flex;
   justify-content: space-between;
+  width: 100%;
   padding: 20px;
   height: 240px;
   gap: 20px;
@@ -13,7 +14,8 @@
 .product__info {
   display: flex;
   flex-direction: column;
-  min-width: 320px;
+  justify-content: center;
+  min-width: 40%;
   gap: 20px;
 }
 
@@ -22,17 +24,18 @@
 }
 
 .product__title {
-  margin-top: 20px;
   font-size: var(--small-fs);
 }
 
 .product__image {
-  width: 240px;
+  max-width: 30%;
   object-fit: contain;
 }
 
 .product__buttons {
   display: flex;
+  width: 30%;
+  max-width: 128px;
   flex-direction: column;
   justify-content: center;
   gap: 20px;
@@ -40,7 +43,7 @@
 
 .product__button {
   all: unset;
-  width: 128px;
+  width: 100%;
   height: 30px;
   background-color: var(--color-pink);
   color: var(--color-white);
