--- a/src/index.css
+++ b/src/index.css
@@ -27,9 +27,6 @@
 }
 
 button {
-
-    /*display: block;*/
-    /*margin-top: 10px;*/
     width: 80px;
 }
 
@@ -49,7 +46,7 @@ button {
     position:fixed;
     left: 100px;
     top: 100px;
-    z-index: 1;
+    z-index: 2;
     border: cadetblue 5px solid;
     background-color: white;
 
@@ -141,7 +138,7 @@ button {
 .wrapCart {
     height: 400px;
     width: 400px;
-        z-index: 1;
+    z-index: 2;
     position: fixed;
     right: 50px;
     top: 50px;
@@ -192,4 +189,13 @@ button {
     background: crimson;
     color: white ;
     margin-top: 20px;
+}
+
+.invisibleBackground {
+    position: fixed;
+    left: 0px;
+    top:  0px;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
 }
