--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -1,4 +1,6 @@
 .popup {
+  top: 0;
+  left: 0;
   position: fixed;
   width: 100%;
   height: 100vh;
@@ -10,6 +12,9 @@
 .popup__order,
 .popup__cart {
   display: none;
+}
+.popup_opened {
+  display: flex;
 }
 
 .popup__container {
@@ -39,6 +44,7 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  user-select: none;
 }
 .popup__button_order {
   width: 140px;
@@ -112,6 +118,7 @@
   flex-flow: column wrap;
 }
 .popup__info_cart {
+  align-items: flex-start;
   flex-flow: row nowrap;
   width: 100%;
   height: 70%;
